index.css
@import url("https://fonts.googleapis.com/css2?family=Gantari:wght@500&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  --lightWhite: rgb(173, 173, 173);
  --lightWhiteHover: rgb(216, 216, 216);
  --brightWhite: #ffffff;
  --headerBlack: #151212;
  --backgroundBlack: #111111;
  font-family: "Gantari", sans-serif;
}
body {
  background: var(--backgroundBlack);
}
p {
  font-size: 1.2rem;
}
h1 {
  font-size: 4rem;
}
nav {
  position: sticky;
  top: 0;
  width: 100%;
}
/* navbar */
nav ul {
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--headerBlack);
  height: 50px;
}
nav ul li {
  margin-left: 40px;
  height: inherit;
  list-style-type: none;
}
nav ul li:first-child {
  margin-left: 0px;
}

nav ul li {
  color: var(--lightWhite);
  text-decoration: none;
  height: inherit;
  line-height: 3rem;
  display: block;
  transition: all 0.2s;
  cursor: pointer;
}
nav ul li a:hover {
  color: var(--lightWhiteHover);
}

/* sections general */
section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: calc(100vh - 3rem);
  background: var(--backgroundBlack);
}
section > div {
  box-sizing: border-box;
  display: block;
  width: 100vw;
  padding: 40px 100px 200px 100px;
  color: var(--lightWhite);
}

section div > h1 {
  color: var(--brightWhite);
  font-size: 3rem;
  font-weight: bold;
  margin-bottom: 2rem;
}

section div ul {
}

section div ul li,
section div ul li a,
section div p {
  list-style-type: none;
  margin: 0 0 1rem 0;
  text-align: left;
  text-decoration: none;
  color: var(--lightWhite);
}
#welcome div p {
  text-decoration: underline;
}
section div p {
  margin-bottom: 2rem;
}

/* Welcome section */

#welcome {
  background-image: url("output-onlinepngtools.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

/* #welcome div {
  background: black;
  width: 800px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
} */

/* about me */

#aboutMe {
  display: flex;
  justify-content: center;
}
.container {
  width: 100vw;
  display: flex;
  flex-direction: row;
}
.container :first-child {
  margin-right: 50px;
}

/* .container > div > * {
} */

#archerImgContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

#archerImgContainer img {
  margin: 0;
  padding: 0;
  border-radius: 50%;
  width: 100%;
}

/* projects */

#projects h2 {
  margin-bottom: 1rem;
  text-transform: capitalize;
}

